# MyPeepholePass

./: CMakeLists.txt  README.md
bench/: pass_bench.cpp  pass_bench.ll
src/: my_pass.cpp
test/: .lit_test_times.txt  almost_pattern.ll  cube_of_sum.ll  cube_of_sum_permutations.ll  lit.site.cfg.py  use_of_result.ll
